# phenoradar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.yml  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: cli-reference.md  configuration.md  data-format.md  output-artifacts.md  pipeline-details.md  quickstart.md  release-automation.md
src/phenoradar/: __init__.py  bundle.py  cli.py  cv.py  figures.py  interpret.py  launcher.py  metadata.py  model_selection.py  provenance.py  reporting.py  split.py  testdata.py  tree_prediction.py
src/phenoradar/config/: __init__.py  io.py  schema.py
testdata/c4_tiny/: README.md  SHA256SUMS  ncbi_tree.nwk  species_metadata.tsv  species_trait.tsv  tpm.tsv
tests/: test_tree_prediction.py
tests/bundle/: test_bundle.py  test_bundle_internal.py
tests/cli/: test_cli_config_commands.py  test_launcher.py
tests/config/: test_io.py
tests/cv/: test_cv.py
tests/figures/: test_figures.py
tests/interpret/: test_interpret.py
tests/metadata/: test_metadata.py
tests/model_selection/: test_model_selection.py
tests/provenance/: test_provenance.py
tests/report/: test_reporting.py
tests/split/: test_split.py
